overlap issue

--- a/core/app/globals.css
+++ b/core/app/globals.css
@@ -3012,16 +3012,12 @@ div#radix-\:Rmkomtlfb\: {
 @media (min-width: 1261px) {
     .css-sbz8zg {
         padding-right: 290px !important;
-        width: 9999px;
+        width: 1529px;
         position: absolute;
         top: 0;
         left: -90px !important;
         bottom: 0;
-        /* left: 50px; */
-        /* border-radius: inherit; */
-        /* overflow: hidden; */
     }
-   
 }
 
     .container, .emthemesModez-section--alt .emthemesModez-section-inner {
